# aylp_asi

./: README.md  aylp_asi.c  aylp_asi.h  libaylp  meson.build
contrib/: conf_test.json  fsm_test.json
libasi/lib/mac/: libASICamera2.dylib
